[package]
name = "gh-stats"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
hubcaps = { git = "https://github.com/softprops/hubcaps", branch="master"}
tokio = { version = "0.2", features = ["macros"] } 
structopt = "0.3.17"
regex = "1.3.9"
tera = "1.5.0"
