[package]
name = "gh-stats"
description = "Async command-line tool for retrieving the stars of all your Github projects."
version = "0.1.0"
license = "Apache-2.0/MIT"
repository = "https://github.com/mre/gh-stats"
homepage = "https://github.com/mre/gh-stats"
documentation = "https://github.com/mre/gh-stats/blob/master/README.md"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2021"
keywords = [
    "github",
    "statistics",
    "stars",
]

[dependencies]
anyhow = "1.0.42"
tokio = { version = "1.8.2", features = ["macros", "rt-multi-thread"] } 
tokio-stream = "0.1.7"
structopt = "0.3.22"
regex = "1.5.4"
tera = "1.12.1"
url = "2.2.2"
hubcaps = "0.6.2"
futures = "0.3.16"
openssl-sys = "0.9.72"

[features]
vendored-openssl = ["openssl-sys/vendored"]

[patch.crates-io]
# Switch back to version on crates.io after 0.6.3+ is released
hubcaps = { git="https://github.com/softprops/hubcaps.git", branch="master" }
